# massive-graph

./: .cursorignore  .cursorrules  .env.template  .gitignore  Cargo.toml  DIAGNOSTIC_TEST_PLAN.md  DOCUMENT_TYPES.md  Dockerfile  RADIX_INDEX_HOT_PATHS_QUICK_REF.md  RADIX_INDEX_HOT_PATH_ANALYSIS.md  RADIX_INDEX_IMPLEMENTATION_PLAN.md  RADIX_INDEX_NEXT_STATE_IMPLEMENTATION_PLAN.md  README.md  SEGMENTED_STREAM_LIFECYCLE.md  WORKSPACE.md  config-example.toml  config.toml  content  quick_test_commands.md  rust-toolchain.toml
.bin/: dev.sh  prod.sh  watch.sh
.cargo/: config.toml
bench_analysis/: README.md  benchmark_results.csv  clear_bench_cache.sh  export_bench_to_csv.py  requirements.txt
benches/: delta_sync.rs  graph_operations.rs
browser/: Cargo.toml
browser/.bin/: build-threaded.sh  build.sh  watch.sh
browser/src/: all.rs  lib.rs  utils.rs
browser/src/webrtc/: browser_connection.rs  mod.rs  worker_integration.rs
browser/src/workers/: browser_app.rs  dedicated_worker_app.rs  mod.rs  service_worker_context.rs
crates/massive-graph-3d-vis/: .gitignore  Cargo.toml  README.md
crates/massive-graph-3d-vis/src/: all.rs  camera.rs  gizmo_shader.wgsl  gizmo_view.rs  lib.rs  main_view.rs  math.rs  performance.rs  shader.wgsl  types.rs  utils.rs
crates/massive-graph-core/: Cargo.toml
crates/massive-graph-core/benches/: compare_indexes_get_bench.rs  compare_indexes_insert_bench.rs  optimised_index_bench.rs  segmented_stream.rs  spsc_bench.rs
crates/massive-graph-core/examples/: document_header_example.rs  test_allocation_tracking.rs  test_epoch_defer.rs  test_epoch_overflow.rs  test_index_memory.rs  wire_format_example.rs
crates/massive-graph-core/src/: constants.rs  lib.rs
crates/massive-graph-core/src/comms/: connection_manager.rs  mod.rs  network.rs  protocol.rs
crates/massive-graph-core/src/core/: app_state.rs  config.rs  factory.rs  logging.rs  mod.rs
crates/massive-graph-core/src/delta/: delta_processor.rs  mod.rs
crates/massive-graph-core/src/storage/: document_simple.rs  document_storage.rs  mem_advanced.rs  mem_simple.rs  mod.rs  store.rs  user_space.rs
crates/massive-graph-core/src/structures/: mod.rs  spsc.rs
crates/massive-graph-core/src/structures/mph_delta_index/: DEBUG_LOGGING.md  arena.rs  bloom.rs  debug_macros.rs  epoch_tracker.rs  mod.rs  mph_build_test.rs  mph_index.rs  mph_indexer.rs  optimised_index.rs  radix_index.rs  radix_index_v2.rs  radix_stats.rs  tiny_map.rs  util.rs
crates/massive-graph-core/src/structures/mph_delta_index/tests/: benchmark_replication_tests.rs  diagnostic_tests.rs  memory_footprint_tests.rs  mph_indexer_nondeterminism_test.rs  mph_indexer_tests.rs  radix_index_diagnostics.rs  radix_index_tests.rs  tests.rs
crates/massive-graph-core/src/structures/optimised_index/: Optimised Index Benchmarks.md  arena.rs  bloom.rs  mod.rs  optimised_index.rs  radix_delta.rs  tests.rs
crates/massive-graph-core/src/structures/segmented_stream/: Segmented Stream.md  mod.rs  segmented_stream.rs  tests.rs
crates/massive-graph-core/src/structures/spsc/: SPSC Ring.md  mod.rs  spsc.rs
crates/massive-graph-core/src/structures/zerocopy_storage/: mod.rs
crates/massive-graph-core/src/system/: metrics.rs  mod.rs  utils.rs
crates/massive-graph-core/src/types/: delta.rs  document.rs  error.rs  field.rs  ids.rs  mod.rs  parse.rs  schema.rs  schemas.rs  storage.rs  stream.rs  user.rs  value.rs
crates/massive-graph-core/src/webrtc/: connection.rs  mod.rs  payload.rs  signaling.rs
docs/: -WIP_data_ownership_model.md  -WIP_delta-propogation-queues.md  -WIP_segmented_array.md  B-Tree Architecture for Text Files, Arrays and Tensors.md  Browser Architecture 1 - Worker Store and Field Notification.md  Data Types for Zero Copy Architecture.md  Delta Architecture Designed for Network Optimisation.md  Delta Operations.md  Delta Processing and Propagation Architecture.md  Document Active State and Zero Locking Strategies.md  Document Meta and Property Index Architecture.md  Field Address Wire Format Optimization Analysis.md  Massive Graph: Property Index Implementation.md  Massive Graph: Schema Design v2.md  Massive Graph: Schema as Compression Dictionary Architecture.md  Memory Storage Architecture v2.md  Memory Storage Architecture.md  Optimised Index.md  Reactive Event Driven Architecture using DAG Graph.md  Zero Overhead Storage Architecture Implementation.md
examples/: storage_patterns.rs
scripts/: README_BENCHMARKS.md  bench_to_csv.rs  parse_bench_results.py  test_api.sh
server/: Cargo.toml
server/.bin/: debug-watch.sh  dev.sh  prod.sh  watch.sh
server/src/: constants.rs  lib.rs  main.rs  utils.rs
server/src/api/: api_handlers.rs  api_server.rs  handlers.rs  mod.rs  server.rs
server/src/core/: mod.rs  multithreading.rs
server/src/quic/: config.rs  connection_manager.rs  mod.rs  server.rs  shard_runtime.rs  types.rs
server/src/webrtc/: handlers.rs  mod.rs  str0m_connection.rs
server/test/: test_quic_client.rs
src/: api.rs  comms.rs  constants.rs  core.rs  delta.rs  lib.rs  main.rs  storage.rs  system.rs  types.rs  web.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src/comms/: webrtc.rs
src/core/: allocator.rs  app_state.rs  config.rs  delta_processor.rs  error.rs  mod.rs  types.rs  utils.rs
src/core/documents/: binary.rs  (+5 more)
src/delta/: mod.rs  processor.rs  types.rs
src/graph/: delta.rs  edge.rs  graph_ops.rs  index.rs  merge.rs  mod.rs  node.rs
src/network/: connection.rs  mod.rs  protocol.rs  sync.rs  transport.rs
src/security/: collaboration.rs  mod.rs  permissions.rs  user.rs
src/storage/: engine.rs  factory.rs  heap.rs  mem_advanced.rs  mem_simple.rs  mem_store.rs  mod.rs  store.rs  user_space.rs
src/system/: metrics.rs  mod.rs  profiling.rs  utils.rs
src/types/: delta.rs  document.rs  error.rs  ids.rs  schemas.rs  storage.rs  stream.rs  value.rs
tests/: README.md  TESTS.md  package.json  pnpm-lock.yaml  poc-tests.sh  poc.postman_collection.json  sync-postman.sh  vite.config.js
tests/examples/: delta_processing.rs  storage_patterns.rs
tests/src/: App.svelte  TestItem.svelte
