[workspace]
members = [
    "crates/massive-graph-core",
    "server",
    "browser"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies used by multiple packages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Server-specific (only used by server package)
anyhow = "1.0"
once_cell = "1.19"
hex = "0.4"
base64 = "0.22"
crossbeam = "0.8"
tracing = "0.1"

# WASM dependencies (used by browser and core when targeting wasm)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Minimal async runtime
tokio = { version = "1.0", default-features = false }

# Data structures (WASM-compatible)
dashmap = "5.5"
arc-swap = "1.7"
bytes = "1.5"
bincode = "1.3"
rmp-serde = "1.1"

# Testing and utilities
rand = "0.8"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.bench]
opt-level = 3
debug = false
lto = "fat"