[package]
name = "massive-graph-browser"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Rancie <jordan@econic.ai>"]
description = "Massive Graph browser package"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
massive-graph-core = { path = "../crates/massive-graph-core" }

wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

web-sys = { version = "0.3", features = [
    "console", 
    "MessagePort", 
    "MessageEvent", 
    "ExtendableMessageEvent",
    "ServiceWorker",
    "ServiceWorkerContainer", 
    "Navigator",
    "Window",
    "MessageChannel",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcOfferOptions",
    "RtcAnswerOptions",
    "RtcSignalingState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcPeerConnectionState",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ResponseInit"
] }
tracing = { workspace = true }


## No async runtime needed for hello-world

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
