[package]
name = "massive-graph-server"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Rancie <jordan@econic.ai>"]
description = "Native server for Massive Graph database"
license = "MIT"

[[bin]]
name = "massive-graph-server"
path = "src/main.rs"

[[bin]]
name = "test_quic_client"
path = "test/test_quic_client.rs"

[dependencies]
# Core shared library
massive-graph-core = { path = "../crates/massive-graph-core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Full tokio with networking for native server
tokio = { version = "1.0", features = ["full"] }

# HTTP server stack
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }

# High-performance data structures (native optimized)
dashmap = "6.1.0"
crossbeam = "0.8"
lockfree = "0.5"
parking_lot = "0.12"
flume = "0.11"
im = "15.1"

# Native-only dependencies
memmap2 = "0.9"
jemallocator = "0.5"

# Networking (native only)
s2n-quic = "1.36"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
str0m = "0.6"

# Cryptography
ed25519-dalek = "2.0"
sha3 = "0.10"
blake3 = "1.5"

# Metrics and monitoring
prometheus = "0.13"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Utilities
num_cpus = "1.16"
arc-swap = "1.7.1"

# Serialization
rmp-serde = "1.1"
bincode = { workspace = true }
bytes = "1.5"
toml = "0.9.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
rand = { workspace = true }
