[package]
name = "massive-graph-core"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Rancie <jordan@econic.ai>"]
description = "Core types and logic for Massive Graph database - WASM compatible"
license = "MIT"

[lib]
name = "massive_graph_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies (WASM-compatible)
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }

# Data structures (WASM-compatible from workspace)
dashmap = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }

# For ID generation (WASM-compatible)
rand = { workspace = true }

# WASM-specific dependencies (conditional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

# Native dependencies (non-WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
once_cell = { workspace = true }
prometheus = "0.13"
crossbeam = { workspace = true }
tracing = { workspace = true }

[features]
default = []